<resources>
    <string name="app_name">Conference management</string>
    <string name="authorisation">AUTHORISATION</string>
    <string name="enter_email">ENTER EMAIL</string>
    <string name="please_provide_your_email">Please provide your email</string>
    <string name="next">NEXT</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="event_management">EVENT MANAGEMENT</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="code_has_sent">Code has sent on your email</string>
    <string name="enter_code">ENTER CODE</string>
    <string name="please_provide_code_from_your_email">Please provide code from your email</string>
    <string name="hint_edit_code">—</string>
    <string name="send_again">Send again.</string>
    <string name="no_code">No code?</string>
    <string name="enter_new_passcode">ENTER NEW PASSCODE</string>
    <string name="please_provide_4_digital_for_you_passcode">Please provide 4 digital for you passcode</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_zero">0</string>
    <string name="enter_passcode">ENTER PASSCODE</string>
    <string name="please_enter_your_passcode">Please enter your passcode</string>
    <string name="button_forgot">Forgot?</string>
    <string name="button_skip">Skip?</string>
    <string name="re_enter_passcode">RE-ENTER PASSCODE</string>
    <string name="passcode">PASSCODE</string>
    <string name="set_passcode">SET PASSCODE</string>
    <string name="please_remember_your_passcode">Please remember your passcode</string>
    <string name="no_internet_connection">No Internet connection.</string>
    <string name="delete_button_content_desc">delete button</string>
    <string name="sign_out">Sign out</string>
    <string name="those_passwords_didnt_match_try_again">Those passwords didn\'t match. Try again.</string>
    <string name="arrow_back">arrow back</string>
    <string name="search">Search</string>
    <string name="confirmation_error">Confirmation error</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="bad_response">Bad response</string>
    <string name="bad_request">Bad request</string>
    <string name="registration">Registration</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="event_title">Event title</string>
    <string name="passcode_removed">Passcode has removed</string>
    <string name="not_found">Not found</string>
    <string name="pull_to_filter">Pull To Filter</string>
    <string name="description">Description</string>
    <string name="no_events_found">No events found</string>
    <string name="click_to_create">Click + to create your own event</string>
    <string name="retry">Retry</string>
    <string name="divider">/</string>
    <string name="dot_indicator">dot indicator</string>
    <string name="small_calendar">small calendar</string>
    <string name="image_featured_event">Image featured event</string>
    <string name="event_image">Event image</string>
    <string name="new_event_title">NEW EVENT</string>
    <string name="event_uppercase">EVENT</string>
    <string name="select_city">Select City</string>
    <string name="provide_place">Provide Place</string>
    <string name="city">City</string>
    <string name="clear">CLEAR</string>
    <string name="event_category">Event Category</string>
    <string name="select_category">Select Category</string>
    <string name="make_event_private">Make event private</string>
    <string name="select_language">Select Language</string>
    <string name="save_draft">Save draft</string>
    <string name="event_title_hint">Event Title</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="enter_description_please">Enter description please</string>
    <string name="become_a_speaker">Become a speaker</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="unregistered_successfully">Registration canceled</string>
    <string name="info_title">Info</string>
    <string name="schedule">Schedule</string>
    <string name="speakers">Speakers</string>
    <string name="participants">Participants</string>
    <string name="tab">tab</string>
    <string name="fill_information">Fill in the mandatory information.</string>
    <string name="cancel_registration">Cancel registration</string>
    <string name="date_concatenation">%d.%d.%d</string>
    <string name="register">register</string>
    <string name="map_image">Map image</string>
    <string name="pull_to_map">Pull To Map</string>
    <string name="files">Files</string>
    <string name="sponsors">Sponsors</string>
    <string name="user_experience">User experience</string>
    <string name="people">People</string>
    <string name="price">Price</string>
    <string name="read_more">Read more</string>
    <string name="publish">Publish</string>
    <string name="free">Free</string>
    <string name="success">Success</string>
    <string name="my_event">My event</string>
    <string name="profile">Profile</string>
    <string name="my_events">My Events (%d)</string>
    <string name="favourite_events">Favourite Events (%d)</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="number_of_results">%d Results</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="arrow_down">Arrow_down</string>
    <string name="select_categories_hint">Select Categories</string>
    <string name="start">Start</string>
    <string name="shake_to_clear">Shake to clear</string>
    <string name="all">All</string>
    <string name="my_events_title">My Events</string>
    <string name="end">End</string>
    <string name="select_categories">Select Categories</string>
    <string name="select_country">Select Country</string>
    <string name="select_speakers">Select Speakers</string>
    <string name="show_on_line_events">Show on-line events</string>
    <string name="result">Result</string>
    <string name="country">Country</string>
    <string name="speakers_name_and_surname">%s %s</string>
    <string name="no_files">No files</string>
    <string name="save">SAVE</string>
    <string name="youtube_link">YouTube Link</string>
    <string name="provide_link">Provide Link</string>
    <string name="youtube_thumbnail">youtube thumbnail</string>
    <string name="link_added">Link added</string>
    <string name="already_exists">Already exists</string>
    <string name="please_provide_youtube_link">Please provide youtube link</string>
    <string name="select_file">Select File</string>
    <string name="select_picture">Select Picture</string>
    <string name="file_uploaded_successful">File uploaded successful</string>
</resources>
