<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/set_passcode_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintVertical_chainStyle="packed">

    <TextView
        android:id="@+id/passcode_title_text"
        style="@style/TextStyleRobotoRegular"
        android:text="@string/enter_new_passcode"
        android:textColor="@color/colorWaikawaGray"
        android:textSize="@dimen/textSize20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passcode_subtitle_text"
        style="@style/TextStyleRobotoRegular"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/please_provide_4_digital_for_you_passcode"
        android:textColor="@color/colorWaikawaGrayOpacity50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passcode_title_text" />

    <LinearLayout
        android:id="@+id/indicators_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/value_30_dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passcode_subtitle_text">

        <TextView
            android:id="@+id/first_indicator"
            android:tag="first_indicator"
            style="@style/InputIndicatorStyle" />

        <TextView
            android:id="@+id/second_indicator"
            android:tag="second_indicator"
            style="@style/InputIndicatorStyle" />

        <TextView
            android:id="@+id/third_indicator"
            android:tag="third_indicator"
            style="@style/InputIndicatorStyle" />

        <TextView
            android:id="@+id/fourth_indicator"
            android:tag="fourth_indicator"
            style="@style/InputIndicatorStyle" />

    </LinearLayout>


    <Button
        android:id="@+id/button_3"
        style="@style/ButtonPassCodeStyle"
        android:tag="3"
        android:text="@string/button_three"
        app:layout_constraintBottom_toTopOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_1"
        style="@style/ButtonPassCodeStyle"
        android:tag="1"
        android:text="@string/button_one"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_2"
        style="@style/ButtonPassCodeStyle"
        android:tag="2"
        android:text="@string/button_two"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_6"
        style="@style/ButtonPassCodeStyle"
        android:tag="6"
        android:text="@string/button_six"
        app:layout_constraintBottom_toTopOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_5"
        style="@style/ButtonPassCodeStyle"
        android:tag="5"
        android:text="@string/button_five"
        app:layout_constraintBottom_toTopOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_4"
        style="@style/ButtonPassCodeStyle"
        android:tag="4"
        android:text="@string/button_four"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_7"
        style="@style/ButtonPassCodeStyle"
        android:tag="7"
        android:text="@string/button_seven"
        app:layout_constraintBottom_toTopOf="@+id/button_forgot"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_8"
        style="@style/ButtonPassCodeStyle"
        android:tag="8"
        android:text="@string/button_eight"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_9"
        style="@style/ButtonPassCodeStyle"
        android:tag="9"
        android:text="@string/button_nine"
        app:layout_constraintBottom_toTopOf="@+id/button_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton
        android:id="@+id/button_del"
        style="@style/ButtonDelPassCodeStyle"
        android:contentDescription="@string/delete_button_content_desc"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_forgot"
        style="@style/ButtonPassCodeStyle.Borderless"
        android:text="@string/button_forgot"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_0"
        style="@style/ButtonPassCodeStyle"
        android:tag="0"
        android:text="@string/button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_del"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_forgot"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>