<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="authorisationReEnterPassCodeFragment"
            type="com.epam.epmrduacmvan.views.AuthorisationReEnterPassCodeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/set_passcode_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_enter_new_passcode"
            style="@style/TextStyle"
            android:layout_marginTop="16dp"
            android:text="@string/re_enter_passcode"
            android:textColor="@color/colorWaikawaGray"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_please_provide2"
            style="@style/TextStyle"
            android:layout_marginTop="3dp"
            android:text="@string/please_remember_your_passcode"
            android:textColor="#8A5A718B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_enter_new_passcode" />

        <Button
            android:id="@+id/button_1"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginStart="18dp"
            android:layout_marginTop="79dp"
            android:text="@string/button_one"
            app:layout_constraintBottom_toTopOf="@+id/button_4"
            app:layout_constraintEnd_toStartOf="@+id/button_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_please_provide2" />

        <Button
            android:id="@+id/button_2"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginTop="79dp"
            android:text="@string/button_two"
            app:layout_constraintBottom_toTopOf="@+id/button_5"
            app:layout_constraintEnd_toStartOf="@+id/button_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_1"
            app:layout_constraintTop_toBottomOf="@+id/text_please_provide2" />

        <Button
            android:id="@+id/button_3"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginTop="79dp"
            android:layout_marginEnd="18dp"
            android:text="@string/button_three"
            app:layout_constraintBottom_toTopOf="@+id/button_6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_2"
            app:layout_constraintTop_toBottomOf="@+id/text_please_provide2" />

        <Button
            android:id="@+id/button_4"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginStart="18dp"
            android:text="@string/button_four"
            app:layout_constraintBottom_toTopOf="@+id/button_7"
            app:layout_constraintEnd_toStartOf="@+id/button_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_1" />

        <Button
            android:id="@+id/button_5"
            style="@style/ButtonPasscodeStyle"
            android:text="@string/button_five"
            app:layout_constraintBottom_toTopOf="@+id/button_8"
            app:layout_constraintEnd_toStartOf="@+id/button_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_4"
            app:layout_constraintTop_toBottomOf="@+id/button_2" />

        <Button
            android:id="@+id/button_6"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginEnd="18dp"
            android:text="@string/button_six"
            app:layout_constraintBottom_toTopOf="@+id/button_9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_5"
            app:layout_constraintTop_toBottomOf="@+id/button_3" />

        <Button
            android:id="@+id/button_7"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginStart="18dp"
            android:text="@string/button_seven"
            app:layout_constraintBottom_toTopOf="@+id/button_empty"
            app:layout_constraintEnd_toStartOf="@+id/button_8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4" />

        <Button
            android:id="@+id/button_8"
            style="@style/ButtonPasscodeStyle"
            android:text="@string/button_eight"
            app:layout_constraintBottom_toTopOf="@+id/button_0"
            app:layout_constraintEnd_toStartOf="@+id/button_9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_7"
            app:layout_constraintTop_toBottomOf="@+id/button_5" />

        <Button
            android:id="@+id/button_9"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginEnd="18dp"
            android:text="@string/button_nine"
            app:layout_constraintBottom_toTopOf="@+id/button_del"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_8"
            app:layout_constraintTop_toBottomOf="@+id/button_6" />

        <Button
            android:id="@+id/button_empty"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="9dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_0"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_7" />

        <Button
            android:id="@+id/button_0"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginBottom="9dp"
            android:text="@string/button_zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_del"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_empty"
            app:layout_constraintTop_toBottomOf="@+id/button_8" />

        <ImageButton
            android:id="@+id/button_del"
            style="@style/ButtonPasscodeStyle"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="9dp"
            android:contentDescription="@string/delete_button_content_desc"
            android:src="@drawable/ic_keyboard_icon_del_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_0"
            app:layout_constraintTop_toBottomOf="@+id/button_9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>




